--- a/css/index.css
+++ b/css/index.css
@@ -517,3 +517,122 @@ html, body{
   display: inline-block; /* Restringe o realce ao conteúdo */
 
 }
+
+       .redtext {
+            color: BLACK;
+        }
+
+        .imagem-container {
+            display: none;
+            margin-top: 10px;
+            border-left: 2px solid #ccc;
+            padding-left: 10px;
+        }
+
+        .imagem-container img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        #botao_ver_imagem {
+            background-color: rgb(37, 37, 39);
+            border: 1px solid #e7e7e7;
+            border-radius: 8px;
+            color: white;
+            padding: 4px 12px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 14px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+
+        #botao_ver_imagem:hover {
+            background-color: #104E8B;
+            color: white;
+        }
+
+        #expandirPainel {
+            margin-top: 10px;
+            margin-right: 30px;
+            margin-bottom: 5px;
+            padding: 8px 14px;
+            border-radius: 8px;
+            border: none;
+            background-color: #333;
+            color: white;
+            font-size: 14px;
+            cursor: pointer;
+            opacity: 0.85;
+            float: right;
+        }
+        #expandirPainel:hover {
+            opacity: 1;
+        }
+
+        /* Modo tela cheia */
+        .fullscreen-panel {
+        position: fixed !important;
+        top: -40px;
+        left: 0;
+        width: 115vw !important;
+        height: 100vh !important;
+
+        background: white;
+        overflow-y: auto;
+        z-index: 9998;
+
+        overflow-y: auto;   /* ✅ barra de rolagem */
+        overflow-x: hidden;
+
+        padding-top: 75px;
+        padding-left: 30px;
+        z-index: 9998;
+
+        /* Centralização */
+        align-items: flex-start;  /* Começa no topo, mas centralizado */
+        }    
+        
+        .fullscreen-panel {
+    font-size: 2.1em;   /* Aumenta toda a fonte dentro do painel */
+}
+
+.fullscreen-panel * {
+    font-size: inherit; /* Garante que todos os textos acompanhem o aumento */
+}
+.fullscreen-panel > div {
+    margin-left: 100px;
+    max-width: 1700px;    /* limita o tamanho */
+}
+
+.fullscreen-panel #link-consultar-avisos {
+    display: none !important;
+}
+
+.fullscreen-panel .painel-avisos {
+    max-height: calc(100vh - 120px); /* espaço para título + botão */
+    overflow-y: auto;
+    box-shadow: 0 0 20px rgba(0,0,0,.15);
+    padding: 1px;
+    margin-left: 50px;
+}
+
+.fullscreen-panel .painel-avisos {
+    max-height: calc(100vh - 120px);
+    overflow-y: auto;
+    /* Ocultar scrollbar */
+    scrollbar-width: none;        /* Firefox */
+    -ms-overflow-style: none;     /* Internet Explorer / Edge antigo */
+}
+
+.fullscreen-panel .painel-avisos::-webkit-scrollbar {
+    display: none;                /* Chrome, Edge, Safari */
+}
+
+#expandirPainel {
+    position: sticky;
+    bottom: 20px;
+    float: right;
+    z-index: 9999;
+}
