--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,27 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body.painel-aberto {
+    overflow: hidden;
+}
+
+body.painel-aberto header,
+body.painel-aberto footer {
+  display: none;
+}
+
+header {
+    margin-bottom: 0;
+}
+
+footer {
+    margin-top: 0;
+}
+
 
 * {
     margin: 0 auto;
@@ -632,6 +656,7 @@ html, body{
     border-radius: 10px;
 }
 
+
 .fullscreen-panel .painel-avisos::-webkit-scrollbar {
     display: none;                /* Chrome, Edge, Safari */
 }
@@ -641,4 +666,21 @@ html, body{
     bottom: 20px;
     float: right;
     z-index: 9999;
+}
+
+#faixa-preta {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 60px;        /* largura da faixa */
+  height: 100vh;      /* altura total da tela */
+
+  background-color: rgb(37, 37, 39);
+  z-index: 9000;      /* abaixo do painel (9999) */
+  display: none;      /* só aparece quando expandir */
+}
+
+body.painel-aberto #faixa-preta {
+  display: block;
 }
